--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^5.2.2",
     "flag-icons": "^6.6.6",
     "sass": "^1.56.1",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue-star-rating": "^2.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
